chore: centralize versions and dependencies in parent POM